--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -1,82 +1,77 @@
 @font-face {
-    font-family: "Muli";
-    src: local("Muli"),
-      url(../../assets/fonts/muli/Muli.ttf) format("truetype");
-  }
-  @font-face {
-    font-family: "Muli-ExtraLight";
-    src: local("MuliExtraLight"),
-      url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
-  }
-header{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        position: relative;
-        font-size: 62.5%;
-        box-sizing: border-box;
-        // border: 10px solid green;
-        overflow: hidden;
-        margin: 0 !important;
-        .imgHeader{
-        filter: grayscale(100%);
-
-        margin: 0 !important;
-        opacity: rgba(0,0,0,0.7);
-        // height: 568px;
-        // width: 300px;
-        // position: relative;
-        // margin: 0;
-        // padding: 0%;
-        // z-index: 2;
-        // z-index: 2;
-        // display: contents;
-        // border: 3px violet solid;
-        height: 100vh;
-        box-sizing: border-box;
-        // overflow: hidden;
-        display: block;
-    }
-
-    article{
-            font-size:  1.5 ;
-            position :absolute;
-            top : 60%;
-            right:4%;
-            border-radius: 10px;
-            z-index: 4;
-            border: solid 2px black;
-            width: 80%;
-           
-            
-        p:nth-child(1){
-            display: none;
-        }
-        .tagline{
-            color:black;
-            border-radius: 10px;
-
-            background-color: rgba(255,255,255,0.76);
-            font-weight:bold;
-            // font-family:Arial, Helvetica, sans-serif;
-            font-family: "Muli";
-            font-weight: 100; 
-            text-align:left;
-            em {
-                font-style:normal;
-                color:#D99827;
-                font-weight: 1;
-                padding-bottom: 4px;
-            }
-        }
-        a{
-            background-color: rgba(255,255,255,0.76);
-            text-align: center;
-            font-family: "Muli-ExtraLight";
-        }
-
-    }
+  font-family: "Muli";
+  src: local("Muli"), url(../../assets/fonts/muli/Muli.ttf) format("truetype");
 }
+@font-face {
+  font-family: "Muli-ExtraLight";
+  src: local("MuliExtraLight"),
+    url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
+}
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+  font-size: 62.5%;
+  box-sizing: border-box;
+  // border: 10px solid green;
+  overflow: hidden;
+  margin: 0 !important;
+  .imgHeader {
+    margin: 0 !important;
+    opacity: rgba(0, 0, 0, 0.7);
+    // height: 568px;
+    // width: 300px;
+    // position: relative;
+    // margin: 0;
+    // padding: 0%;
+    // z-index: 2;
+    // z-index: 2;
+    // display: contents;
+    // border: 3px violet solid;
+    height: 100vh;
+    box-sizing: border-box;
+    // overflow: hidden;
+    display: block;
+    filter: saturate(5%) contrast(125%);
+  }
 
+  article {
+    font-size: 1.5;
+    position: absolute;
+    top: 60%;
+    right: 4%;
+    border-radius: 10px;
+    z-index: 4;
+    border: solid 2px black;
+    width: 80%;
+
+    p:nth-child(1) {
+      display: none;
+    }
+    .tagline {
+      color: black;
+      border-radius: 10px;
+
+      background-color: rgba(255, 255, 255, 0.76);
+      font-weight: bold;
+      // font-family:Arial, Helvetica, sans-serif;
+      font-family: "Muli";
+      font-weight: 100;
+      text-align: left;
+      em {
+        font-style: normal;
+        color: #d99827;
+        font-weight: 1;
+        padding-bottom: 4px;
+      }
+    }
+    a {
+      background-color: rgba(255, 255, 255, 0.76);
+      text-align: center;
+      font-family: "Muli-ExtraLight";
+    }
+  }
+}
