--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -7,6 +7,11 @@
   src: local("MuliExtraLight"),
     url(../../assets/fonts/muli/Muli-ExtraLight.ttf) format("truetype");
 }
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"),
+    url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
 header {
   display: flex;
   justify-content: center;
@@ -16,6 +21,7 @@ header {
   position: relative;
   font-size: 62.5%;
   box-sizing: border-box;
+
   // border: 10px solid green;
   overflow: hidden;
   margin: 0 !important;
@@ -41,37 +47,53 @@ header {
   article {
     font-size: 1.5;
     position: absolute;
-    top: 60%;
-    right: 4%;
+    top: 48%;
+    right: 20%;
+    width: 69%;
+    height: 40%;
     border-radius: 10px;
     z-index: 4;
-    border: solid 2px black;
-    width: 80%;
+    border: solid 0px rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
 
     p:nth-child(1) {
       display: none;
     }
     .tagline {
-      color: black;
+      color: white;
       border-radius: 10px;
-
-      background-color: rgba(255, 255, 255, 0.76);
       font-weight: bold;
-      // font-family:Arial, Helvetica, sans-serif;
-      font-family: "Muli";
+      font-family: "Muli-ExtraLight";
       font-weight: 100;
       text-align: left;
+      font-size: 0.8rem;
+      padding: 25px;
       em {
         font-style: normal;
-        color: #d99827;
+        color: white;
         font-weight: 1;
         padding-bottom: 4px;
+        font-family: "Muli-Bold";
+        font-size: 1rem;
       }
     }
     a {
       background-color: rgba(255, 255, 255, 0.76);
       text-align: center;
       font-family: "Muli-ExtraLight";
+      text-decoration: none;
+    }
+    .enSavoirPlus {
+      color: #fff38a;
+      font-family: "Muli";
+      font-size: 0.9rem;
+      background-color: transparent;
+      font-size: 0.7rem;
+      padding-left: 0px;
+      em {
+        color: #fff38a;
+        font-size: 0.9rem;
+      }
     }
   }
 }
