--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -3,16 +3,20 @@
   src: local("MuliLight"),
     url(../../assets/fonts/muli/Muli-Light.ttf) format("truetype");
 }
+@font-face {
+  font-family: "Muli-Bold";
+  src: local("MuliBold"),
+    url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
+}
 .BurgerLink {
   font-size: 62.5%;
-  // border: 5px solid rgb(252, 215, 8);
   display: flex;
   position: fixed;
   box-sizing: border-box;
   justify-content: space-between;
+  z-index: 10;
 
   .burgerMenu {
-    // border: 1px solid red;
     margin: 10px;
 
     div {
@@ -39,35 +43,5 @@
     align-items: center;
     list-style: none;
     border: 4px solid yellow;
-
-    .contacts p {
-      display: none;
-    }
-    .contacts :hover {
-      p {
-        display: block;
-      }
-    }
   }
 }
-
-// li:nth-child(1) {
-//   border: 3px solid brown;
-//   transition: all 1.1s ease-out;
-// }
-// li:nth-child(2) {
-//   border: 3px solid brown;
-//   transition: all 1.2s ease-out;
-// }
-// li:nth-child(3) {
-//   border: 3px solid brown;
-//   transition: all 1.3s ease-out;
-// }
-// nn li:nth-child(4) {
-//   border: 3px solid brown;
-//   transition: all 1.4s ease-out;
-// }
-// li:nth-child(5) {
-//   border: 3px solid brown;
-//   transition: all 1.5s ease-out;
-// }
