--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -22,53 +22,51 @@ footer {
     box-sizing: border-box;
     list-style: none;
   }
-  // font-size:1.2em !important;
-  div{
-    max-width:100%;
-   
+  p{
+    font-size:1.4em;
   }
   div:nth-child(1) {
-
+    // justify-content: space-between;
     display: flex;
-    max-width: 100%;
-    width: 70vw;
+    width: 100%;
     padding-bottom: 4%;
   // font-size:1.2em !important;
     
     p {
       // font-size:1.2em;
-      width: 50vw;
+      padding-top: 8%;
+      width: 80%;
       display: flex;
-      text-align: left;
-      padding-right: 3%;    
+      // text-align: left;
+      // padding-right: 3%;    
     }
     img {
-      width: 30%;
+      width: 40%;
 
     }
   }
   div:nth-child(2){
     height:100%;
     width:100%;
-    border-top: 1px solid black;
+    border-top: 1px solid red;
     display: flex;
-    align-items: space-between;
     box-sizing: border-box;
     overflow: hidden;
-    padding: 2% 0%;
-    // font-size:1.2em !important;
     .copyright{
-      width: 30%;
+      width: 50%;
       box-sizing: border-box;
-      height: 70%;
-      margin-right: 22%;
+      // height: 70%;
     }
     .Nav{
+      padding-top: 5%;
       box-sizing: border-box;
       height:100%;
-      padding-left:8%;
       width:50%;
       list-style-type: none;
+      li:nth-child(n){
+        padding-bottom: 5% ;
+        font-size: 1.2em;
+      }
       // font-size:1.2em;
 
       a{
@@ -78,10 +76,9 @@ footer {
       }  
       
     }
+    .contactFooter{
+      border:3px solid blue ;
+    }
     
-  }
- 
-  li>link{
-    // font-size:1.2em !important;
   }
 }
