--- a/src/assets/stylesheets/actuality.scss
+++ b/src/assets/stylesheets/actuality.scss
@@ -363,11 +363,25 @@
           top: 31.5% !important;
           left: 84%!important;   
         }
-  // figcaption{
-  //   left: 35%!important;
-  // }
-
-
+     // figcaption{
+    //   left: 35%!important;
+     // }
+    h3{
+      font-size: 22px!important;
+    }
+    p, .button1, .button2, .button3{
+      font-size: 16px!important;
+    }
+    h3,
+    p{
+      margin: 0% 13%!important;
+    }
+    .button1, .button2, .button3{
+      margin: 0% 3%!important;
+    } 
+    // article{
+    //   !important;
+    // }
   }
 }
 
