--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -112,20 +112,54 @@
       color: #a2c2df;
     }
   }
-    /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
-    @media(min-width:1024px){
+ /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
+ @media(min-width:1024px){
+   
+   margin: 4% 6%!important;
+      span{
+        margin: 0 !important;
+      }
       h1 {
-       font-size: 40px!important;
+        font-size: 40px!important;
       }
       h2 {
-       font-size: 35px!important;  
+        font-size: 35px!important;  
       }
-      h3,h5{
-        font-size:21px!important;
+      h3,h4{
+        font-size:26px!important;
       }
-      .testimony{
-        display:flex!important;
-        flex-direction: row!important;
+      h5{
+        font-size:20px!important;
+      }
+      p{
+        font-size:24px!important;
+      }
+      .allBox{ 
+          display:flex!important;
+          flex-direction: row!important;
+          border-bottom: 1px solid black!important;
+        .box{
+          display:flex!important;
+          width: 35%!important;
+          margin: 6% 2%!important;
+
+        }
+        .pink,
+        .blue
+        .green{
+          margin-top: 0%!important;
+          padding-top: 0!important;
+
+        }
+        .blue{
+          padding-bottom: 0!important;
+          border-bottom:none!important;
+          // padding-top: 0!important;
+        }
+        .pink{
+          padding-top: 8%!important;
+        }
+
       }
     }  
 }
