--- a/src/assets/stylesheets/contact.scss
+++ b/src/assets/stylesheets/contact.scss
@@ -18,12 +18,22 @@
   }
   ul{
     width: 40%;
-    a{
-      font-size: 2em;
-      text-decoration: none;
-      color: black;
+    li:nth-child(3) a{
+      font-weight: bold!important;
     }
+    a{
+      font-style:"Muli"!important;
+      font-size: 20px;
+      text-decoration: none;
+      color: #d99827;
+      font-weight: bold!important;
+      cursor: pointer!important;
+    }  
+  } 
+  @media only screen and (min-device-width: 1024px) {
+    display: flex!important;
+    align-items: flex-end!important;
+    order:1!important;
   }
-  
 }
 
