--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -14,6 +14,7 @@ footer {
   text-align: left;
   margin: 4% 6%;
   font-family: "Muli-ExtraLight" !important;
+  order:0!important;
   * {
     padding: 0;
     margin: 0;
@@ -61,22 +62,75 @@ footer {
     }
     .contactFooter{
       border:3px solid blue ;
+      
     }
+  }
+ ///////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
+ @media only screen and (min-device-width: 1024px) {
+  //  .contactMobile{
+  //    display: none!important;
+  //  }
+     display: flex!important;
+      div:nth-child(1){
+        padding-top: 0!important;
+        padding-bottom: 1%!important;
+        width: 20vw!important;
+        padding-right: 2%!important;
+        display: flex!important;
+        padding-top:2%!important;
+        margin-right: 5%!important;
+        max-height: 35vh!important;
+        p:nth-child(1){
+          padding-top: 0%!important;
+          min-width: 10vw!important;
+        }
+        img{
+          min-width: 10vw!important;
+          max-height: 26vh !important;
+        }
+      }
+      div:nth-child(2){
+        border-top:none!important;
+      }
+      .footerDesktop{
+        display: flex!important;
+        flex-direction: row!important;
+        height: 50vh!important;
+        width: 50vw!important;
+  
 
- /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
-//  @media only screen and (min-device-width: 1024px) {
-    //   div:nth-child(1) p > *{
-    //   display:fle
-    //  }
+        // border:6px solid black!important;
+        .copyright{
+          // border:3px solid blue;
+          width: 20vw!important;
+          order: 1!important;
+          height: 20vh!important;
+          // margin-top:2%!important ;
+          // a{
 
-    // div:nth-child(1) f{
-    //    font-size: 2em!important; 
-//     //   }
-// p{
-//   font-size: 20px!important;
-// }
-// *{
-//   font-size: 20px!important;
-// }
+          // }
+        }
+        .Nav{
+          width:22vw!important;
+          order:0!important;
+          // border:3px solid yellowgreen;
+          padding-top:2%!important ;
+          padding-top:4%;
+          text-align:center;
+          box-sizing: border-box;
+          height:100%;
+          width:50%;
+          list-style-type: none;
+          li:nth-child(n){
+            padding-bottom: 5% ;
+          }
+          a{
+            cursor: pointer;
+            text-decoration: none;
+            color: black;
+          }      
+        }
+      }
+        
   }
 }
