--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -68,7 +68,7 @@
      
     }
     h3 {
-      font-family: "Quicksand-Regular";
+      font-family: "Quicksand-Light";
     }
     h4 {   
       margin-top: 5px;
@@ -79,34 +79,28 @@
       font-size: 18px;
       margin-top: 2%;
       margin-bottom: 5%;
-      font-family: "Quicksand-Light";
+      font-family: "Muli-Bold";
     }
     p {
       font-size: 16px;
       font-family: "Quicksand-Regular";
     }
   }
-  .pink {
-    // border-top: 1px solid black;
-    margin-bottom: 10%;
-    margin-top: 20%;
+  :nth-child(1) {
     h5 {
       border-bottom: 1px solid #d140d6;
       color: #d140d6;
       padding-bottom: 2%;
     }
   }
-  .green {
-      margin-bottom: 10%;
+  :nth-child(2) {
     h5 {
       border-bottom: 1px solid#91C877;
       color: #91c877;
     }
   }
-  .blue {
+  :nth-child(3) {
     margin-bottom: 10%;
-    border-bottom: 1px solid black;
-    padding-bottom: 10%;
     h5 {
       border-bottom: 1px solid #a2c2df;
       color: #a2c2df;
@@ -158,21 +152,20 @@
           margin: 6% 2%!important;
 
         }
-        .pink,
-        .blue
-        .green{
+        :nth-child(n){
           margin-top: 0%!important;
           padding-top: 0!important;
-
         }
-        .blue{
+        :nth-child(3),
+        :nth-child(2){
+          h5{
+            padding-bottom: 2%!important;
+          }
+        }
+        :nth-child(3){
           padding-bottom: 0!important;
           border-bottom:none!important;
         }
-        .pink{
-          padding-top: 8%!important;
-        }
-
       }
     }  
 }
