--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -41,13 +41,13 @@ header {
   // border: 10px solid green;
   overflow: hidden;
   margin: 0 !important;
-  // 
-.logo{
-  display: none;
-}
-.facebookLink{
-  display: none;
-}
+  //
+  .logo {
+    display: none;
+  }
+  .facebookLink {
+    display: none;
+  }
   .imgHeader {
     margin: 0 !important;
     opacity: rgba(0, 0, 0, 0.7);
@@ -74,11 +74,11 @@ header {
     right: 20%;
     width: 80%;
     height: 45%;
-    border-radius: 10px;
+
     z-index: 4;
     border: solid 0px rgba(0, 0, 0, 0.5);
     background: rgba(0, 0, 0, 0.5);
-    color:white;;
+    color: white;
 
     p:nth-child(2) {
       text-align: left;
@@ -105,12 +105,12 @@ header {
       }
     }
   }
-   // // PIXEL 2XL
+  // // PIXEL 2XL
   @media (min-width: 280px), (min-width: 411px) {
     p {
       font-size: 15px !important;
     }
-  
+
     .tagline {
       display: flex !important;
       color: white !important;
@@ -119,25 +119,24 @@ header {
       text-align: left;
       font-size: 16px !important;
       padding-left: 6% !important;
-      
+
       .titleTagline {
         font-size: 22px !important;
-        color: #d99827!important;
+        color: #d99827 !important;
         font-family: "Muli-Bold" !important;
       }
     }
-    .taglineDesktop{
-      display:none !important;
-      .titleTagline{
-        display: none!important;
+    .taglineDesktop {
+      display: none !important;
+      .titleTagline {
+        display: none !important;
       }
     }
-
   }
   // IPAD
   @media (min-width: 768px) {
     article {
-      .titleTagline{
+      .titleTagline {
         font-size: 24px !important;
       }
       .tagline {
@@ -170,12 +169,12 @@ header {
     flex-direction: column !important;
     // position:static;
     // height: 100vh !important;
-    
+
     article {
-      padding-top:10%!important;
+      padding-top: 10% !important;
       background: none !important;
-      border: 3px solid red !important;
-     
+      // border: 1px solid #ffc136 !important;
+
       width: 41vw;
       height: 100vh;
       top: 0;
@@ -186,13 +185,13 @@ header {
       /////// LOGO + SLOGAN
       .logo {
         display: flex !important;
-     
-        justify-content: space-around;
+
+        justify-content: space-around;    
         align-items: center;
         flex-direction: column;
-        
+
         img {
-          max-width: 50%!important;
+          max-width: 18% !important;
         }
         p {
           color: rgb(43, 93, 153) !important;
@@ -207,22 +206,21 @@ header {
       }
       ////// TAGLINE + TITLE DESKTOP
       .taglineDesktop {
-        display:block !important; 
+        display: block !important;
         font-family: "Roboto-Light";
         // margin-top: 76%;
         margin-bottom: 2%;
         text-align: left !important;
         font-size: 25px !important;
         padding: 4%;
-        color:black!important;
+        color: black !important;
       }
-      .taglineDesktop 
-      .titleTaglineDesktop {
-          display: none!important;
+      .taglineDesktop .titleTaglineDesktop {
+        display: none !important;
       }
-      
+
       .titleTagline {
-        display: none!important;
+        display: none !important;
       }
       .enSavoirPlus {
         font-size: 24px !important;
@@ -243,7 +241,7 @@ header {
       box-sizing: border-box;
       background-size: cover;
       background-image: url("../images/Header-tablette-pro.jpg") !important;
-      border: 5px solid red !important;
+      // border: 2px solid #ba0ee3 !important;
       background-repeat: no-repeat;
       justify-content: flex-end !important;
       align-items: flex-end !important;
