--- a/src/assets/stylesheets/adminPage.scss
+++ b/src/assets/stylesheets/adminPage.scss
@@ -5,3 +5,9 @@ section{
     flex-direction: column;
     padding:15% 0;
 }
+input{
+    background: white;
+}
+#content_article {
+    height: 326px;
+}
